Exercise 2.07/manifests/3.statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: log-output
  name: postgresql
spec:
  serviceName: db-svc
  replicas: 1
  selector:
    matchLabels:
      app: postgres-app
  template:
    metadata:
      labels:
        app: postgres-app
    spec:
      containers:
        - name: postgres
          image: katushka/log-output-db:1.0
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-path
        resources:
          requests:
            storage: 100Mi
